--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -19,7 +19,18 @@ jobs:
 
     name: Build and test
     runs-on: ubuntu-latest
-
+    services:
+      db:
+        image: postgres:15
+        ports: ["5432:5432"]
+        env:
+          POSTGRES_PASSWORD: postgres
+        # NOTE: Enable healthcheck explicit wait later if needed
+        # options: >-
+        #   --health-cmd pg_isready
+        #   --health-interval 10s
+        #   --health-timeout 5s
+        #   --health-retries 5
     steps:
     - uses: actions/checkout@v4
     - name: Set up Elixir
